# game-bevy

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md
.cargo/: config.toml
core/: Cargo.toml
core/src/: app.rs  lib.rs  scene.rs
crates/core/: Cargo.toml
crates/core/src/: app.rs  grid.rs  lib.rs  scene.rs
crates/editor/: Cargo.toml
crates/editor/src/: editor.rs  lib.rs
crates/engine/: Cargo.toml
crates/engine/src/: app.rs  camera.rs  camera_controller.rs  grid.rs  lib.rs  scene.rs
crates/game/: Cargo.toml
crates/game/src/: main.rs
crates/modloader/: Cargo.toml
crates/modloader/src/: assetregistry.rs  lib.rs  manifest.rs  package.rs
editor/: Cargo.toml
editor/src/: editor.rs  lib.rs
game/: Cargo.toml
game/src/: main.rs
