
[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "0.0.0"
edition = "2024"
license = "MIT OR Apache-2.0"
authors = ["Alexander Verbeek <sanderman@gmail.com>"]

[workspace.dependencies] # Note: Use `cargo sort` to keep dependencies somewhat organised.
bevy = { version = "0.18.1", default-features = true, features = ["dynamic_linking"] }
bevy-inspector-egui = { version = "0.36.0", features = ["highlight_changes"] }
bevy_camera = "0.18.1"
bevy_egui = "0.39"
bevy_input = "0.18.1"
bevy_reflect = "0.18.1"
bevy_window = "0.18.1"
big_space = { version = "*", features = ["debug", "camera"] }
core = { path = "core" }
editor = { path = "editor" }
egui = "0.33.3"
egui_dock = "0.18.0"
log = { version = "*", features = ["max_level_debug", "release_max_level_warn"] }
transform-gizmo-bevy = "0.9.0"

# Enable a small amount of optimization in the dev profile.
[profile.dev]
#codegen-backend = "llvm"
#codegen-backend = "cranelift"
opt-level = 1

# Enable a large amount of optimization in the dev profile for dependencies.
[profile.dev.package."*"]
#codegen-backend = "llvm"
opt-level = 3
