[package]
name = "editor"
version = "0.1.0"
edition = "2024"

[dependencies]
bevy = { workspace = true }
bevy-inspector-egui = { workspace = true }
bevy_camera = { workspace = true }
bevy_egui = { workspace = true }
bevy_reflect = { workspace = true }
bevy_window = { workspace = true }
egui = { workspace = true }
egui_dock = { workspace = true }
transform-gizmo-bevy = { workspace = true }
